--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -38,7 +38,7 @@ img {
 
 .jumbotron {
     position: relative;
-    background: #fff url("jumbotron-bg.png") center center;
+    background: #fff;
     width: 100%;
     height: 100%;
     background-size: cover;
